--- a/hugo.toml
+++ b/hugo.toml
@@ -5,7 +5,7 @@ title = 'Vale Demo Content'
 theme = 'hugo-book'
 
 [security]
-  enableInlineShortcodes = false
+  enableInlineShortcodes = true
 
   [security.exec]
     allow = ['^(dart-)?sass(-embedded)?$', '^go$', '^git$', '^npx$', '^postcss$', '^tailwindcss$', '^asciidoctor$', '^rst2html']
@@ -17,3 +17,14 @@ theme = 'hugo-book'
   [security.http]
     methods = ['(?i)GET|POST']
     urls = ['.*']
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.extensions]
+      [markup.goldmark.extensions.passthrough]
+        enable = true
+        [markup.goldmark.extensions.passthrough.delimiters]
+          block = [['\[', '\]'], ['$$', '$$']]
+          inline = [['\(', '\)']]
+[params]
+  math = true
