Added GitHub Workflow

--- a/example-vale-config-files/example1.ini
+++ b/example-vale-config-files/example1.ini
@@ -4,11 +4,11 @@
 StylesPath = .styles
 
 ; Third party style guides for download
-Packages = write-good, Readability
+Packages = Google, Readability, write-good 
 
 ; Settings for all Files
 [*]
 
 ; Which style guides apply
-BasedOnStyles = Vale, write-good, Readability
+BasedOnStyles = Google, write-good, Readability, Vale
 
