--- a/example-vale-config-files/example1.ini
+++ b/example-vale-config-files/example1.ini
@@ -4,11 +4,11 @@
 StylesPath = .styles
 
 ; Third party style guides for download
-Packages = Google, Readability, write-good 
+Packages = Google
 
-; Settings for all Files
-[*]
+; Settings for Markdown Files
+[*.md]
 
 ; Which style guides apply
-BasedOnStyles = Google, write-good, Readability, Vale
+BasedOnStyles = Google, Vale
 
