--- a/example-vale-config-files/example3.ini
+++ b/example-vale-config-files/example3.ini
@@ -9,12 +9,9 @@ Packages = write-good, Readability
 ; Add a custom vocabulary for our project
 Vocab = ProjectVocab
 
-; Settings for all Files
-[*]
+; Settings for Markdown Files
+[*.md]
 
 ; Which style guides apply
 BasedOnStyles = Vale, write-good, Readability
-
-; Ignore passive voice warnings
-write-good.Passive = NO
 
