--- a/example-vale-config-files/example2.ini
+++ b/example-vale-config-files/example2.ini
@@ -1,16 +1,16 @@
 ; Add some some pre-defined style guides (packages)
 
+; Ignore anything above error. Options “suggestion”, “warning”, or “error” (defaults to “warning”).
+MinAlertLevel = error
+
 ; Where all the Vale related files live
 StylesPath = .styles
 
 ; Third party style guides for download
 Packages = write-good, Readability
 
-; Add a custom vocabulary for our project
-Vocab = ProjectVocab
-
 ; Settings for all Files
-[*]
+[*.md]
 
 ; Which style guides apply
 BasedOnStyles = Vale, write-good, Readability
