--- a/example-vale-config-files/example3.ini
+++ b/example-vale-config-files/example3.ini
@@ -3,8 +3,6 @@
 ; Where all the Vale related files live
 StylesPath = .styles
 
-; Third party style guides for download
-Packages = write-good, Readability
 
 ; Add a custom vocabulary for our project
 Vocab = ProjectVocab
@@ -13,5 +11,5 @@ Vocab = ProjectVocab
 [*.md]
 
 ; Which style guides apply
-BasedOnStyles = Vale, write-good, Readability
+BasedOnStyles = Vale 
 
