--- a/example-vale-config-files/example4.ini
+++ b/example-vale-config-files/example4.ini
@@ -4,7 +4,7 @@
 StylesPath = .styles
 
 ; Third party style guides for download
-Packages = write-good, Readability
+Packages = Google, Readability
 
 ; Add a custom vocabulary for our project
 Vocab = ProjectVocab
@@ -13,7 +13,7 @@ Vocab = ProjectVocab
 [*.md]
 
 ; Which style guides apply, including our new project style
-BasedOnStyles = Vale, write-good, Readability, ProjectStyle
+BasedOnStyles = Vale, Google, Readability, ProjectStyle
 
 Vale.Spelling = NO
 
