--- a/example-vale-config-files/example2.ini
+++ b/example-vale-config-files/example2.ini
@@ -1,17 +1,14 @@
 ; Add some some pre-defined style guides (packages)
 
-; Ignore anything above error. Options “suggestion”, “warning”, or “error” (defaults to “warning”).
-MinAlertLevel = error
-
 ; Where all the Vale related files live
 StylesPath = .styles
 
 ; Third party style guides for download
-Packages = write-good, Readability
+Packages = Google, Readability
 
 ; Settings for all Files
 [*.md]
 
 ; Which style guides apply
-BasedOnStyles = Vale, write-good, Readability
+BasedOnStyles = Vale
 
