--- a/example-vale-config-files/example2.ini
+++ b/example-vale-config-files/example2.ini
@@ -10,5 +10,5 @@ Packages = Google, Readability
 [*.md]
 
 ; Which style guides apply
-BasedOnStyles = Vale
+BasedOnStyles = Vale, Google, Readability
 
