--- a/example-vale-config-files/example5.ini
+++ b/example-vale-config-files/example5.ini
@@ -13,7 +13,7 @@ Vocab = ProjectVocab
 [*.md]
 
 ; Which style guides apply, including our new project style
-BasedOnStyles = Vale, write-good, Readability, ProjectStyle
+BasedOnStyles = Vale, Readability, ProjectStyle
 
 Vale.Spelling = NO
 
